--- a/app/src/main/res/layout-xlarge/start_menu_screen.xml
+++ b/app/src/main/res/layout-xlarge/start_menu_screen.xml
@@ -7,56 +7,47 @@
     android:padding="100dp"
     android:background="@color/black">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/tabLayoutCardView"
-        android:layout_width="300dp"
+    <TextView
+        android:id="@+id/titleTextView"
+        style="@style/TitleText"
+        android:layout_width="0dp"
         android:layout_height="60dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/timeSelectorLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:strokeWidth="2dp"
-        app:strokeColor="@color/natural_white"
-        app:cardCornerRadius="8dp">
-
-        <!-- A vertical divider will be drawn in here programmatically -->
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/dateTabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@color/black"
-            app:tabMode="auto"
-            app:tabInlineLabel="true"
-            app:tabIndicatorHeight="0dp"
-            app:tabTextColor="@color/gray"
-            app:tabSelectedTextColor="@color/natural_white">
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/todayTabItem"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:icon="@drawable/icon_check_mark"
-                android:text="@string/tabItemToday"/>
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/tomorrowTabItem"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tabItemTomorrow"/>
-
-        </com.google.android.material.tabs.TabLayout>
-    </com.google.android.material.card.MaterialCardView>
+        android:padding="0dp"
+        android:gravity="center"
+        android:text="@string/startMenuTitle"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/timeSelectorLayout"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tabLayoutCardView"
+        app:layout_constraintTop_toBottomOf="@id/titleTextView"
         app:layout_constraintBottom_toTopOf="@id/confirmBlockSlideToActView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:paddingVertical="100dp">
+        android:paddingVertical="28dp">
+
+        <NumberPicker
+            android:id="@+id/dayNumberPicker"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/colonTextView1"/>
+
+        <TextView
+            android:id="@+id/colonTextView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/dayNumberPicker"
+            app:layout_constraintEnd_toStartOf="@id/hourNumberPicker"
+            android:layout_marginHorizontal="5dp"
+            android:text="@string/timerColon"/>
 
         <NumberPicker
             android:id="@+id/hourNumberPicker"
@@ -64,11 +55,11 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/colonTextView"/>
+            app:layout_constraintStart_toEndOf="@id/colonTextView1"
+            app:layout_constraintEnd_toStartOf="@id/colonTextView2"/>
 
         <TextView
-            android:id="@+id/colonTextView"
+            android:id="@+id/colonTextView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -84,16 +75,15 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/colonTextView"
+            app:layout_constraintStart_toEndOf="@id/colonTextView2"
             app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.ncorti.slidetoact.SlideToActView
         android:id="@+id/confirmBlockSlideToActView"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
-        app:layout_constraintTop_toBottomOf="@id/timeSelectorLayout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
