--- a/app/src/main/res/layout-large/blocker_overlay_screen.xml
+++ b/app/src/main/res/layout-large/blocker_overlay_screen.xml
@@ -7,137 +7,21 @@
     android:padding="10dp"
     android:background="@color/black">
 
-    <!-- Toggleable Helper Text Layout-->
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/helperScrollView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/helperImageButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="gone"
-        android:fillViewport="true"
-        android:scrollbars="none">
-        
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="150dp">
-            
-            <TextView
-                android:id="@+id/helperTitleTextView1"
-                style="@style/TitleText"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/firstHelperTitle"/>
-
-            <TextView
-                android:id="@+id/helperTextView1"
-                style="@style/RobotoTextViewStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/helperTitleTextView1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/firstHelperText"/>
-
-            <TextView
-                android:id="@+id/helperTitleTextView2"
-                style="@style/TitleText"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/helperTextView1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/secondHelperTitle"/>
-
-            <TextView
-                android:id="@+id/helperTextView2"
-                style="@style/RobotoTextViewStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/helperTitleTextView2"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/secondHelperText1"/>
-
-            <TextView
-                android:id="@+id/helperTextView3"
-                style="@style/RobotoTextViewStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/helperTextView2"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/secondHelperText2"/>
-
-            <TextView
-                android:id="@+id/helperTextView4"
-                style="@style/RobotoTextViewStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/helperTextView3"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/secondHelperText3"/>
-
-            <TextView
-                android:id="@+id/helperTextView5"
-                style="@style/RobotoTextViewStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/helperTextView4"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/secondHelperText4"/>
-
-            <TextView
-                android:id="@+id/helperTextView6"
-                style="@style/RobotoTextViewStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/helperTextView5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/secondHelperText5"/>
-
-            <TextView
-                android:id="@+id/helperTextView7"
-                style="@style/RobotoTextViewStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/helperTextView6"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/secondHelperText6"/>
-
-            <TextView
-                android:id="@+id/helperTextView8"
-                style="@style/RobotoTextViewStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/helperTextView7"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/secondHelperText7"/>
-
-            <TextView
-                android:id="@+id/helperTextView9"
-                style="@style/RobotoTextViewStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/helperTextView8"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/helperSectionDisclaimer"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
-
     <!-- Block overlay layout -->
+    <TextView
+        android:id="@+id/toggleTapsTextView"
+        style="@style/RobotoTextViewStyle"
+        android:visibility="gone"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/helperImageButton"
+        android:padding="0dp"
+        android:gravity="center_vertical"
+        android:textColor="@color/gray"
+        android:text="@string/tapCounterHelper"/>
+
     <ImageButton
         android:id="@+id/helperImageButton"
         android:layout_width="60dp"
