--- a/app/src/main/res/layout-small/start_menu_screen.xml
+++ b/app/src/main/res/layout-small/start_menu_screen.xml
@@ -7,14 +7,38 @@
     android:padding="5dp"
     android:background="@color/black">
 
+    <TextView
+        android:id="@+id/titleTextView"
+        style="@style/TitleText"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/appsImageButton"
+        android:padding="0dp"
+        android:gravity="center_vertical"
+        android:text="@string/startMenuTitle"/>
+
+    <ImageButton
+        android:id="@+id/appsImageButton"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/titleTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginVertical="9dp"
+        android:background="@drawable/icon_app_whitelist"
+        android:contentDescription="@string/whitelistAppButtonText" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/timeSelectorLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titleTextView"
         app:layout_constraintBottom_toTopOf="@id/confirmBlockButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingVertical="28dp">
 
         <NumberPicker
             android:id="@+id/dayNumberPicker"
@@ -71,7 +95,7 @@
         android:id="@+id/confirmBlockButton"
         android:theme="@style/SavageBlockerButtonStyle"
         android:layout_width="0dp"
-        android:layout_height="45dp"
+        android:layout_height="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
