--- a/app/src/main/res/layout/start_menu_screen.xml
+++ b/app/src/main/res/layout/start_menu_screen.xml
@@ -4,7 +4,7 @@
     android:id="@+id/mainContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:padding="20dp"
     android:background="@color/black">
 
     <TextView
@@ -14,10 +14,21 @@
         android:layout_height="60dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/appsImageButton"
         android:padding="0dp"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:text="@string/startMenuTitle"/>
+
+    <ImageButton
+        android:id="@+id/appsImageButton"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/titleTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginVertical="9dp"
+        android:background="@drawable/icon_app_whitelist"
+        android:contentDescription="@string/whitelistAppButtonText" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/timeSelectorLayout"
