--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -4,134 +4,33 @@
     android:viewportWidth="135.47"
     android:viewportHeight="135.47">
   <path
-      android:pathData="M-0,-0h135.47v135.47h-135.47z"
-      android:strokeWidth="0.821354"
+      android:pathData="M0,0h135.47v135.47h-135.47z"
+      android:strokeWidth="5e-08"
       android:fillColor="#000000"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M44.39,90.27L66.5,68.16A1.74,1.74 0,0 1,68.95 68.16L68.95,68.16A1.74,1.74 0,0 1,68.95 70.62L46.85,92.73A1.74,1.74 0,0 1,44.39 92.73L44.39,92.73A1.74,1.74 0,0 1,44.39 90.27z"
-      android:strokeWidth="0.18"
+      android:pathData="m67.71,41.27c-10.42,0 -20.67,7.54 -22.97,18.03 -0.53,2.39 -0.19,6.46 0.96,8.56 0.36,0.66 0.74,1.32 1.09,1.95 0.65,1.19 0.31,3.04 -0.69,3.9 -0.26,0.22 -0.51,0.45 -0.72,0.68 -0.72,0.79 -0.78,2.77 -0.5,3.86 1.07,4.06 5.11,7.73 8.92,7.73 0.77,-0 1.31,-0.15 1.88,-0.39l0,3.99l0.02,0c0.15,-1.09 1.07,-1.92 2.19,-1.92l1.62,0c1.13,0 2.05,0.83 2.2,1.92l0,0c0.15,-1.09 1.07,-1.92 2.2,-1.92l1.61,0c1.13,0 2.05,0.83 2.19,1.92l0,0c0.15,-1.09 1.07,-1.92 2.2,-1.92l1.61,0c1.13,0 2.05,0.83 2.2,1.92l0,0c0.15,-1.09 1.07,-1.92 2.2,-1.92l1.61,0c1.13,0 2.05,0.83 2.19,1.92l0.02,0l0,-3.98c0.57,0.23 1.11,0.39 1.88,0.39 3.81,-0 7.85,-3.67 8.92,-7.73 0.29,-1.09 0.22,-3.06 -0.5,-3.86 -0.22,-0.24 -0.46,-0.46 -0.72,-0.68 -1,-0.86 -1.34,-2.71 -0.69,-3.9 0.35,-0.64 0.73,-1.29 1.09,-1.95 1.14,-2.11 1.48,-6.17 0.96,-8.56 -2.3,-10.49 -12.55,-18.03 -22.97,-18.03zM48.83,64.24c0.21,0 0.41,0.06 0.61,0.17l14.84,8.46l0,-0.32c0,-0.71 0.57,-1.29 1.29,-1.29 0.71,0 1.29,0.57 1.29,1.29l0,2.49c0,0.71 -0.57,1.29 -1.29,1.29 -0.19,0 -0.36,-0.04 -0.53,-0.11 -0,-0 -0,-0 -0.01,-0 -0.07,-0.02 -0.14,-0.06 -0.2,-0.09L64.11,75.72a8.06,8.16 90,0 1,-6.46 3.14,8.06 8.16,90 0,1 -8.16,-8.06 8.06,8.16 90,0 1,0.62 -3.06l-1.96,-1.12c-0.61,-0.35 -0.82,-1.12 -0.47,-1.73 0.25,-0.42 0.69,-0.65 1.15,-0.64zM86.59,64.24c0.45,-0.01 0.9,0.22 1.15,0.64 0.36,0.61 0.15,1.38 -0.47,1.73l-1.96,1.12a8.06,8.16 90,0 1,0.62 3.06,8.06 8.16,90 0,1 -8.16,8.06 8.06,8.16 90,0 1,-6.46 -3.14l-0.72,0.41c-0.07,0.04 -0.13,0.07 -0.2,0.09 -0,0 -0.01,0 -0.01,0 -0.16,0.07 -0.34,0.11 -0.52,0.11 -0.71,0 -1.29,-0.58 -1.29,-1.29l0,-2.49c0,-0.71 0.57,-1.29 1.29,-1.29 0.71,0 1.29,0.57 1.29,1.29l0,0.32l14.84,-8.46c0.19,-0.11 0.4,-0.16 0.61,-0.17zM67.71,76.57c1.07,0 4.34,7.27 3.81,8.45 -0,0.01 -0.01,0.02 -0.01,0.02 -0.11,0.21 -0.42,0.13 -0.57,-0.06 -0.71,-0.83 -1.92,-1.34 -3.23,-1.34 -1.3,0 -2.5,0.5 -3.21,1.32 -0.17,0.19 -0.5,0.28 -0.6,0.05l0,-0c-0.53,-1.18 2.74,-8.45 3.81,-8.45z"
+      android:strokeWidth="0"
       android:fillColor="#e3e3e3"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M68.97,68.16L91.07,90.27A1.74,1.74 90,0 1,91.07 92.73L91.07,92.73A1.74,1.74 0,0 1,88.62 92.73L66.51,70.62A1.74,1.74 90,0 1,66.51 68.16L66.51,68.16A1.74,1.74 0,0 1,68.97 68.16z"
-      android:strokeWidth="0.18"
+      android:pathData="m64.13,89.28l1.13,0c0.88,0 1.58,0.71 1.58,1.58l0,1.75c0,0.88 -0.71,1.58 -1.58,1.58l-1.13,0c-0.88,0 -1.58,-0.71 -1.58,-1.58l0,-1.75c0,-0.88 0.71,-1.58 1.58,-1.58z"
+      android:strokeWidth="0"
       android:fillColor="#e3e3e3"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M51.01,42.23A12.38,12.38 0,0 0,38.63 54.61,12.38 12.38,135 0,0 41.4,62.4 23.85,23.85 0,0 1,56.62 43.57,12.38 12.38,45 0,0 51.01,42.23Z"
-      android:strokeWidth="0.3"
+      android:pathData="m70.15,89.28l1.13,0c0.88,0 1.58,0.71 1.58,1.58l0,1.75c0,0.88 -0.71,1.58 -1.58,1.58l-1.13,0c-0.88,0 -1.58,-0.71 -1.58,-1.58l0,-1.75c0,-0.88 0.71,-1.58 1.58,-1.58z"
+      android:strokeWidth="0"
       android:fillColor="#e3e3e3"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="m84.45,42.23a12.38,12.38 135,0 1,12.38 12.38,12.38 12.38,135 0,1 -2.77,7.78A23.85,23.85 0,0 0,78.85 43.57,12.38 12.38,45 0,1 84.45,42.23Z"
-      android:strokeWidth="0.3"
+      android:pathData="m76.17,89.28l1.13,0c0.88,0 1.58,0.71 1.58,1.58l0,1.75c0,0.88 -0.71,1.58 -1.58,1.58l-1.13,0c-0.88,0 -1.58,-0.71 -1.58,-1.58l0,-1.75c0,-0.88 0.71,-1.58 1.58,-1.58z"
+      android:strokeWidth="0"
       android:fillColor="#e3e3e3"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M67.73,67.73m-23.85,0a23.85,23.85 0,1 1,47.7 0a23.85,23.85 0,1 1,-47.7 0"
-      android:strokeWidth="0.35"
-      android:fillColor="#e3e3e3"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M67.73,67.73m-21.22,0a21.22,21.22 0,1 1,42.44 0a21.22,21.22 0,1 1,-42.44 0"
-      android:strokeWidth="0.31"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M67.73,54.77C62.63,54.77 57.61,58.47 56.48,63.6 56.23,64.78 56.39,66.77 56.95,67.8 57.13,68.12 57.31,68.44 57.48,68.76 57.8,69.34 57.64,70.24 57.14,70.67 57.02,70.77 56.9,70.88 56.79,71 56.44,71.39 56.41,72.36 56.55,72.89 57.07,74.88 59.05,76.68 60.92,76.68c0.62,-0 0.94,-0.2 1.51,-0.45 0.08,-0.03 0.21,-0.08 0.3,-0.1a13.48,12.54 90,0 1,2.47 -0.1l2.54,-0.02l0,0l2.54,0.02a13.48,12.54 90,0 1,2.47 0.1c0.08,0.02 0.22,0.06 0.3,0.1 0.57,0.25 0.88,0.45 1.51,0.45 1.87,-0 3.84,-1.8 4.37,-3.79 0.14,-0.53 0.11,-1.5 -0.24,-1.89 -0.11,-0.12 -0.23,-0.23 -0.35,-0.34 -0.49,-0.42 -0.66,-1.33 -0.34,-1.91 0.17,-0.31 0.36,-0.63 0.53,-0.96 0.56,-1.03 0.73,-3.02 0.47,-4.19C77.86,58.47 72.84,54.77 67.73,54.77Z"
-      android:strokeWidth="0.2"
-      android:fillColor="#e3e3e3"
-      android:strokeColor="#00000000"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m67.31,70.09l-0,1.22c-0,0.35 -0.28,0.63 -0.63,0.63 -0.35,0 -0.63,-0.28 -0.63,-0.63l-0,-1.22c-0,-0.35 0.28,-0.63 0.63,-0.63 0.35,0 0.63,0.28 0.63,0.63z"
-      android:strokeWidth="0.11"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m58.78,66.11l8.17,4.66c0.3,0.17 0.4,0.55 0.23,0.85 -0.17,0.3 -0.56,0.4 -0.86,0.23L58.15,67.18c-0.3,-0.17 -0.4,-0.55 -0.23,-0.85 0.17,-0.3 0.56,-0.4 0.86,-0.23z"
-      android:strokeWidth="0.525638"/>
-  <path
-      android:pathData="m59.44,67.11a3.95,4 90,0 0,-0.63 2.13,3.95 4,90 0,0 4,3.95 3.95,4 90,0 0,3.65 -2.35z"
-      android:strokeWidth="0.32"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m68.15,70.09l0,1.22c0,0.35 0.28,0.63 0.63,0.63 0.35,0 0.63,-0.28 0.63,-0.63l0,-1.22c0,-0.35 -0.28,-0.63 -0.63,-0.63C68.44,69.46 68.15,69.74 68.15,70.09Z"
-      android:strokeWidth="0.11"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m76.68,66.11l-8.17,4.66c-0.3,0.17 -0.4,0.55 -0.23,0.85 0.17,0.3 0.56,0.4 0.86,0.23L77.32,67.18c0.3,-0.17 0.4,-0.55 0.23,-0.85 -0.17,-0.3 -0.56,-0.4 -0.86,-0.23z"
-      android:strokeWidth="0.525638"/>
-  <path
-      android:pathData="m76.02,67.11a3.95,4 90,0 1,0.63 2.13,3.95 4,90 0,1 -4,3.95 3.95,4 90,0 1,-3.65 -2.35z"
-      android:strokeWidth="0.32"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="m61.84,73.31l0,5.13l0.01,0c0.07,-0.53 0.52,-0.94 1.08,-0.94l0.79,0c0.55,0 1,0.41 1.08,0.94l0,0c0.07,-0.53 0.52,-0.94 1.08,-0.94l0.79,0c0.55,0 1,0.41 1.08,0.94l0,0c0.07,-0.53 0.52,-0.94 1.08,-0.94l0.79,0c0.55,0 1,0.41 1.08,0.94l0,0c0.07,-0.53 0.52,-0.94 1.08,-0.94l0.79,0c0.55,0 1,0.41 1.08,0.94l0.01,0L73.63,73.31Z"
-      android:strokeWidth="0.33"
-      android:fillColor="#e3e3e3"/>
-  <path
-      android:pathData="m65.98,78.29l0.56,0c0.43,0 0.78,0.35 0.78,0.78l0,0.86c0,0.43 -0.35,0.78 -0.78,0.78L65.98,80.69C65.55,80.69 65.21,80.35 65.21,79.92l0,-0.86c0,-0.43 0.35,-0.78 0.78,-0.78z"
-      android:strokeWidth="0.18"
-      android:fillColor="#e3e3e3"/>
-  <path
-      android:pathData="m68.93,78.29l0.56,0c0.43,0 0.78,0.35 0.78,0.78l0,0.86c0,0.43 -0.35,0.78 -0.78,0.78L68.93,80.69C68.5,80.69 68.15,80.35 68.15,79.92l0,-0.86c0,-0.43 0.35,-0.78 0.78,-0.78z"
-      android:strokeWidth="0.18"
-      android:fillColor="#e3e3e3"/>
-  <path
-      android:pathData="m71.88,78.29l0.56,0c0.43,0 0.78,0.35 0.78,0.78l0,0.86c0,0.43 -0.35,0.78 -0.78,0.78L71.88,80.69C71.45,80.69 71.1,80.35 71.1,79.92l0,-0.86c0,-0.43 0.35,-0.78 0.78,-0.78z"
-      android:strokeWidth="0.18"
-      android:fillColor="#e3e3e3"/>
-  <path
-      android:pathData="m63.03,78.29l0.56,0c0.43,0 0.78,0.35 0.78,0.78l0,0.86c0,0.43 -0.35,0.78 -0.78,0.78L63.03,80.69C62.61,80.69 62.26,80.35 62.26,79.92l0,-0.86c0,-0.43 0.35,-0.78 0.78,-0.78z"
-      android:strokeWidth="0.18"
-      android:fillColor="#e3e3e3"/>
-  <path
-      android:pathData="m67.73,72.06c-0.52,0 -2.13,3.56 -1.87,4.14 0,0 0,0 0,0 0.05,0.11 0.21,0.07 0.29,-0.03 0.35,-0.4 0.94,-0.65 1.57,-0.65 0.64,0 1.23,0.25 1.58,0.66 0.08,0.09 0.23,0.13 0.28,0.03 0,-0 0,-0.01 0.01,-0.01C69.86,75.62 68.26,72.06 67.73,72.06Z"
-      android:strokeWidth="0.18"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M50.08,66.3L51.04,66.3A1.43,1.43 0,0 1,52.47 67.73L52.47,67.73A1.43,1.43 0,0 1,51.04 69.16L50.08,69.16A1.43,1.43 0,0 1,48.65 67.73L48.65,67.73A1.43,1.43 0,0 1,50.08 66.3z"
-      android:strokeWidth="0.16"
-      android:fillColor="#e3e3e3"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M84.43,66.3L85.38,66.3A1.43,1.43 0,0 1,86.81 67.73L86.81,67.73A1.43,1.43 0,0 1,85.38 69.16L84.43,69.16A1.43,1.43 0,0 1,83 67.73L83,67.73A1.43,1.43 0,0 1,84.43 66.3z"
-      android:strokeWidth="0.16"
-      android:fillColor="#e3e3e3"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M69.16,50.08L69.16,51.04A1.43,1.43 0,0 1,67.73 52.47L67.73,52.47A1.43,1.43 0,0 1,66.3 51.04L66.3,50.08A1.43,1.43 0,0 1,67.73 48.65L67.73,48.65A1.43,1.43 0,0 1,69.16 50.08z"
-      android:strokeWidth="0.16"
-      android:fillColor="#e3e3e3"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M69.16,84.43L69.16,85.38A1.43,1.43 0,0 1,67.73 86.81L67.73,86.81A1.43,1.43 0,0 1,66.3 85.38L66.3,84.43A1.43,1.43 0,0 1,67.73 83L67.73,83A1.43,1.43 0,0 1,69.16 84.43z"
-      android:strokeWidth="0.16"
-      android:fillColor="#e3e3e3"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M56.27,54.24L56.94,54.92A1.43,1.43 0,0 1,56.94 56.94L56.94,56.94A1.43,1.43 0,0 1,54.92 56.94L54.24,56.27A1.43,1.43 0,0 1,54.24 54.24L54.24,54.24A1.43,1.43 0,0 1,56.27 54.24z"
-      android:strokeWidth="0.16"
-      android:fillColor="#e3e3e3"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M80.55,78.53L81.23,79.2A1.43,1.43 0,0 1,81.23 81.23L81.23,81.23A1.43,1.43 0,0 1,79.2 81.23L78.53,80.55A1.43,1.43 0,0 1,78.53 78.53L78.53,78.53A1.43,1.43 0,0 1,80.55 78.53z"
-      android:strokeWidth="0.16"
-      android:fillColor="#e3e3e3"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M81.23,56.27L80.55,56.94A1.43,1.43 0,0 1,78.53 56.94L78.53,56.94A1.43,1.43 0,0 1,78.53 54.92L79.2,54.24A1.43,1.43 0,0 1,81.23 54.24L81.23,54.24A1.43,1.43 0,0 1,81.23 56.27z"
-      android:strokeWidth="0.16"
-      android:fillColor="#e3e3e3"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M56.94,80.55L56.27,81.23A1.43,1.43 0,0 1,54.24 81.23L54.24,81.23A1.43,1.43 0,0 1,54.24 79.2L54.92,78.53A1.43,1.43 0,0 1,56.94 78.53L56.94,78.53A1.43,1.43 0,0 1,56.94 80.55z"
-      android:strokeWidth="0.16"
+      android:pathData="m58.11,89.28l1.13,0c0.88,0 1.58,0.71 1.58,1.58l0,1.75c0,0.88 -0.71,1.58 -1.58,1.58l-1.13,0c-0.88,0 -1.58,-0.71 -1.58,-1.58l0,-1.75c0,-0.88 0.71,-1.58 1.58,-1.58z"
+      android:strokeWidth="0"
       android:fillColor="#e3e3e3"
       android:strokeColor="#00000000"/>
 </vector>
