--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -88,11 +88,34 @@
         android:contentDescription="@string/ac_whitelist_toggle"/>
 
     <TextView
+        android:id="@+id/tv_title_screen_time"
+        style="@style/dullphone_secondary_title"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/s_screen_time"
+        app:layout_constraintBottom_toBottomOf="@id/s_screen_time"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/s_screen_time"
+        android:layout_marginEnd="@dimen/spacing_normal"
+        android:text="@string/at_screen_time"/>
+
+    <com.google.android.material.slider.Slider
+        android:id="@+id/s_screen_time"
+        style="@style/dullphone_slider"
+        android:layout_width="@dimen/slider_width"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_title_whitelist"
+        app:layout_constraintStart_toEndOf="@id/tv_title_screen_time"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/spacing_normal"
+        android:contentDescription="@string/ac_whitelist_toggle"/>
+
+    <TextView
         android:id="@+id/tv_title_icon"
         style="@style/dullphone_secondary_title"
         android:layout_width="0dp"
         android:layout_height="@dimen/primary_button_width_normal"
-        app:layout_constraintTop_toBottomOf="@id/tv_title_whitelist"
+        app:layout_constraintTop_toBottomOf="@id/tv_title_screen_time"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/iv_dullphone"
         android:layout_marginEnd="@dimen/spacing_normal"
@@ -103,7 +126,7 @@
         android:id="@+id/iv_dullphone"
         android:layout_width="@dimen/primary_button_width_normal"
         android:layout_height="@dimen/primary_button_width_normal"
-        app:layout_constraintTop_toBottomOf="@id/tv_title_whitelist"
+        app:layout_constraintTop_toBottomOf="@id/tv_title_screen_time"
         app:layout_constraintEnd_toStartOf="@id/iv_skull"
         android:layout_marginEnd="@dimen/spacing_normal"
         android:layout_marginTop="@dimen/spacing_normal"
@@ -115,7 +138,7 @@
         android:id="@+id/iv_skull"
         android:layout_width="@dimen/primary_button_width_normal"
         android:layout_height="@dimen/primary_button_width_normal"
-        app:layout_constraintTop_toBottomOf="@id/tv_title_whitelist"
+        app:layout_constraintTop_toBottomOf="@id/tv_title_screen_time"
         app:layout_constraintEnd_toStartOf="@id/iv_fire"
         android:layout_marginTop="@dimen/spacing_normal"
         android:layout_marginEnd="@dimen/spacing_normal"
@@ -127,7 +150,7 @@
         android:id="@+id/iv_fire"
         android:layout_width="@dimen/primary_button_width_normal"
         android:layout_height="@dimen/primary_button_width_normal"
-        app:layout_constraintTop_toBottomOf="@id/tv_title_whitelist"
+        app:layout_constraintTop_toBottomOf="@id/tv_title_screen_time"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="@dimen/spacing_normal"
         android:paddingVertical="10dp"
