--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -157,4 +157,47 @@
         android:background="@drawable/icon_fire_small"
         android:contentDescription="@string/ac_fire_icon"/>
 
+    <com.google.android.material.slider.RangeSlider
+        android:id="@+id/rs_active_whitelist"
+        style="@style/dullphone_time_range_slider"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/primary_button_width_normal"
+        app:layout_constraintTop_toBottomOf="@id/tv_title_icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/spacing_normal"
+        app:values="@array/initial_slider_values"
+        android:text="@string/at_block_whitelist"/>
+
+    <TextView
+        android:id="@+id/tv_value_start_active_whitelist"
+        style="@style/dullphone_secondary_title"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/tv_title_active_whitelist"
+        app:layout_constraintBottom_toBottomOf="@id/tv_title_active_whitelist"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/at_midnight"/>
+
+    <TextView
+        android:id="@+id/tv_title_active_whitelist"
+        style="@style/dullphone_secondary_title"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/rs_active_whitelist"
+        app:layout_constraintStart_toEndOf="@id/tv_value_start_active_whitelist"
+        app:layout_constraintEnd_toStartOf="@id/tv_value_stop_active_whitelist"
+        android:layout_marginTop="@dimen/spacing_normal"
+        android:text="@string/at_whitelist_active"/>
+
+    <TextView
+        android:id="@+id/tv_value_stop_active_whitelist"
+        style="@style/dullphone_secondary_title"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/tv_title_active_whitelist"
+        app:layout_constraintBottom_toBottomOf="@id/tv_title_active_whitelist"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/at_midnight"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
